--- a/deps/CMakeLists.txt
+++ b/deps/CMakeLists.txt
@@ -46,3 +46,7 @@ if (BUILD_TOOLS_MAPS)
   add_subdirectory(bzip2)
   add_subdirectory(libmpq)
 endif()
+
+if (ELUNA)
+  add_subdirectory(lualib)
+endif()
