--- a/.github/workflows/sync-upstream.yml
+++ b/.github/workflows/sync-upstream.yml
@@ -5,6 +5,10 @@ on:
     - cron: '0 6 * * *'  # Daily at 6:00 AM UTC
   workflow_dispatch:  # Manual trigger
 
+permissions:
+  contents: write
+  pull-requests: write
+
 jobs:
   sync:
     runs-on: ubuntu-latest
